Add package names endpoint
